doc: add swagger doc
