# app/borrowers/borrower_controller.go
@@ -36,6 +36,15 @@ func (controller *BorrowerController) ApplyController(router fiber.Router) {
 	fmt.Println("POST   - /borrowers/login ")
 }
 
+// GetBorrowers ...
+//
+//	@Summary		Get all borrowers
+//	@Description	Return all borrowers (active) in the system
+//	@Tags			borrowers
+//	@Accept			json
+//	@Produce		json
+//	@Router			/borrowers [get]
+//	@Success		200	{object}	[]BorrowerDto
 func (controller *BorrowerController) GetBorrowers(c *fiber.Ctx) error {
 	borrowers, err := borrowerService.GetAllBorrowers()
 	if err != nil {
@@ -45,6 +54,14 @@ func (controller *BorrowerController) GetBorrowers(c *fiber.Ctx) error {
 	return c.JSON(borrowers)
 }
 
+//	@Summary		Get borrower by id
+//	@Description	Return borrower by id
+//	@Tags			borrowers
+//	@Accept			json
+//	@Produce		json
+//	@Router			/borrowers/{id} [get]
+//	@Param			id	path		string	true	"Borrower id"
+//	@Success		200	{object}	BorrowerDto
 func (controller *BorrowerController) GetBorrowerById(c *fiber.Ctx) error {
 	id := c.Params("id")
 
@@ -56,6 +73,14 @@ func (controller *BorrowerController) GetBorrowerById(c *fiber.Ctx) error {
 	return c.JSON(borrower)
 }
 
+//	@Summary		Create borrower
+//	@Description	Create borrower
+//	@Tags			borrowers
+//	@Accept			json
+//	@Produce		json
+//	@Router			/borrowers [post]
+//	@Param			borrower	body		BorrowerDto	true	"Borrower"
+//	@Success		200			{object}	BorrowerDto
 func (controller *BorrowerController) CreateBorrower(c *fiber.Ctx) error {
 	dto := new(BorrowerDto)
 	if err := c.BodyParser(dto); err != nil {
@@ -70,6 +95,15 @@ func (controller *BorrowerController) CreateBorrower(c *fiber.Ctx) error {
 	return c.JSON(borrower)
 }
 
+//	@Summary		Update borrower
+//	@Description	Update borrower
+//	@Tags			borrowers
+//	@Accept			json
+//	@Produce		json
+//	@Router			/borrowers/{id} [put]
+//	@Param			id			path		string				true	"Borrower id"
+//	@Param			borrower	body		BorrowerUpdateDto	true	"Borrower"
+//	@Success		200			{object}	BorrowerDto
 func (controller *BorrowerController) UpdateBorrower(c *fiber.Ctx) error {
 	id := c.Params("id")
 
@@ -86,6 +120,13 @@ func (controller *BorrowerController) UpdateBorrower(c *fiber.Ctx) error {
 	return c.JSON(borrower)
 }
 
+//	@Summary		Delete borrower
+//	@Description	Delete borrower
+//	@Tags			borrowers
+//	@Accept			json
+//	@Produce		json
+//	@Router			/borrowers/{id} [delete]
+//	@Param			id	path	string	true	"Borrower id"
 func (controller *BorrowerController) DeleteBorrower(c *fiber.Ctx) error {
 	id := c.Params("id")
 
@@ -97,6 +138,14 @@ func (controller *BorrowerController) DeleteBorrower(c *fiber.Ctx) error {
 	return c.JSON(fiber.Map{"message": "Borrower deleted"})
 }
 
+//	@Summary		Login
+//	@Description	Login
+//	@Tags			borrowers
+//	@Accept			json
+//	@Produce		json
+//	@Router			/borrowers/login [post]
+//	@Param			borrower	body		BorrowerLoginDto	true	"Borrower"
+//	@Success		200			{object}	BorrowerDto
 func (controller *BorrowerController) Login(c *fiber.Ctx) error {
 	dto := new(BorrowerLoginDto)
 	if err := c.BodyParser(dto); err != nil {
